--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -31,27 +31,38 @@
           </div>
         </div>
       </article>
+      <article class="flex max-w-xl flex-col items-start justify-between">
+        <div class="flex items-center gap-x-4 text-xs">
+        </div>
+        <div class="group relative">
+          <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+              My Team
+          </h3>
+
+          <div id='myTeam' class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">hey append to myTeam id</div>
+        </div>
+      </article>
 
       <div class="group relative">
           <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
             <a href="#" class="grid grid-rows-3 grid-flow-col gap-4 py-3">
               <span class="absolute inset-0"></span>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Nikola Jokic</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Giannis Antetokounmpo</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Luka Doncic</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Jayson Tatum</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Joel Embiid</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Kevin Durant</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Steph Curry</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Lebron James</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Ja Morant</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Damian Lillard</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" data-id="{{player.ranking}}">Nikola Jokic</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" data-id="{{player.ranking}}">Giannis Antetokounmpo</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" data-id="{{player.ranking}}">Luka Doncic</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" data-id="{{player.ranking}}">Jayson Tatum</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" data-id="{{player.ranking}}">Joel Embiid</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" data-id="{{player.ranking}}">Kevin Durant</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" data-id="{{player.ranking}}">Steph Curry</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" data-id="{{player.ranking}}">Lebron James</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" data-id="{{player.ranking}}">Ja Morant</button>
+           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow" data-id="{{player.ranking}}">Damian Lillard</button>
             </a>
           </h3>
           <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600"></p>
         </div>
 
-      <ul role="list" class="divide-y divide-gray-100 py-5">
+      {{!-- <ul role="list" class="divide-y divide-gray-100 py-5">
   <li class="flex justify-between gap-x-6 py-5">
     <div class="flex min-w-0 gap-x-4">
       <img class="object-scale-down h-12 w-36 ..." src="https://cdn.nba.com/headshots/nba/latest/1040x760/203507.png" alt="">
@@ -77,21 +88,25 @@
       <p class="text-sm leading-6 text-gray-900">Ranking</p>
       <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
     </div>
-  </li>
+  </li> --}}
+  {{#each players as |player|}}
+  <button class="players" data-id={{player.ranking}}>
   <li class="flex justify-between gap-x-6 py-5">
     <div class="flex min-w-0 gap-x-4">
-      <img class="object-scale-down h-12 w-36 ..." src="https://cdn.nba.com/headshots/nba/latest/1040x760/201939.png" alt="">
+      <img class="object-scale-down h-12 w-36 ..." src={{player.img}} alt="">
       <div class="min-w-0 flex-auto">
-        <p class="text-sm font-semibold leading-6 text-gray-900">Steph Curry{{name}}</p>
+        <p class="text-sm font-semibold leading-6 text-gray-900">{{player.name}}</p>
         <p class="mt-1 truncate text-xs leading-5 text-gray-500">Player 3</p>
       </div>
     </div>
     <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
       <p class="text-sm leading-6 text-gray-900">Ranking</p>
-      <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
+      <p class="mt-1 text-xs leading-5 text-gray-500">{{player.ranking}}
     </div>
   </li>
-</ul>
+  </button>
+  {{/each}}
+{{!-- </ul> --}}
 
 
     </div>
