--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NBA Fantasty League</title>
+  <title>NBA Fantasy League</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
 
