--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -100,6 +100,9 @@
               </div> --}}
             </div>
           </div>
+          <!-- Logout button -->
+       <button id="logout" type="logout"
+        class="flex justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Log out</button>
         </div>
       </div>
 
@@ -117,7 +120,9 @@
             class="text-gray-300 hover:bg-gray-700 hover:text-white block rounded-md px-3 py-2 text-base font-medium">Calendar</a>
         </div>
       </div>
-      {{!-- <button id="logout">logout</button> --}}
+      {{!-- <button id="logout" type="button"
+        class="flex justify-center rounded-md bg-indigo-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Log out</button> --}}
+
     </nav>
 
 
