--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,10 +1,11 @@
-<div id="dashboardHandles" class="bg-white py-24 sm:py-32">
+<form id="dashboardHandles" class="new-project-form bg-white py-24 sm:py-32">
   <div class="mx-auto max-w-7xl px-6 lg:px-8">
     <div class="mx-auto max-w-2xl lg:mx-0">
       <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">NBA Basketball Fantasy 3v3</h2>
       <p class="mt-2 text-lg leading-8 text-gray-600">Where the top players go head to head</p>
     </div>
-    <div class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
+    <div
+      class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
       <article class="flex max-w-xl flex-col items-start justify-between">
         <div class="flex items-center gap-x-4 text-xs">
         </div>
@@ -19,83 +20,107 @@
           <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600"></p>
         </div>
         <div class="relative mt-8 flex items-center gap-x-4">
-          <img src="https://cdn.nba.com/headshots/nba/latest/1040x760/203999.png" alt="" class="object-scale-down h-48 w-96 ...">
+          <img src="https://cdn.nba.com/headshots/nba/latest/1040x760/203999.png" alt=""
+            class="object-scale-down h-48 w-96 ...">
           <div class="text-sm leading-6">
             <p class="font-semibold text-gray-900">
               <a href="#">
-                <span class="absolute inset-0" ></span>
-                
+                <span class="absolute inset-0"></span>
+
               </a>
             </p>
-            
+
           </div>
         </div>
       </article>
 
       <div class="group relative">
-          <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
-            <a href="#" class="grid grid-rows-3 grid-flow-col gap-4 py-3">
-              <span class="absolute inset-0"></span>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Nikola Jokic</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Giannis Antetokounmpo</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Luka Doncic</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Jayson Tatum</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Joel Embiid</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Kevin Durant</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Steph Curry</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Lebron James</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Ja Morant</button>
-           <button class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Damian Lillard</button>
-            </a>
-          </h3>
-          <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600"></p>
-        </div>
+        <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+          <a href="#" class="grid grid-rows-3 grid-flow-col gap-4 py-3">
+            <span class="absolute inset-0"></span>
+            <button
+              class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Nikola
+              Jokic</button>
+            <button
+              class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Giannis
+              Antetokounmpo</button>
+            <button
+              class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Luka
+              Doncic</button>
+            <button
+              class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Jayson
+              Tatum</button>
+            <button
+              class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Joel
+              Embiid</button>
+            <button
+              class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Kevin
+              Durant</button>
+            <button
+              class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Steph
+              Curry</button>
+            <button
+              class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Lebron
+              James</button>
+            <button
+              class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Ja
+              Morant</button>
+            <button
+              class="bg-white hover:bg-gray-100 text-gray-800 font-semibold py-2 px-4 border border-gray-400 rounded shadow">Damian
+              Lillard</button>
+          </a>
+        </h3>
+        <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600"></p>
+      </div>
 
       <ul role="list" class="divide-y divide-gray-100 py-5">
-  <li class="flex justify-between gap-x-6 py-5">
-    <div class="flex min-w-0 gap-x-4">
-      <img class="object-scale-down h-12 w-36 ..." src="https://cdn.nba.com/headshots/nba/latest/1040x760/203507.png" alt="">
-      <div class="min-w-0 flex-auto">
-        <p class="text-sm font-semibold leading-6 text-gray-900">Giannis Antetokounmpo{{name}}</p>
-        <p class="mt-1 truncate text-xs leading-5 text-gray-500">Player 1</p>
-      </div>
-    </div>
-    <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
-      <p class="text-sm leading-6 text-gray-900">Ranking</p>
-      <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
-    </div>
-  </li>
-  <li class="flex justify-between gap-x-6 py-5">
-    <div class="flex min-w-0 gap-x-4">
-      <img class="object-scale-down h-12 w-36 ..." src="https://cdn.nba.com/headshots/nba/latest/1040x760/1629029.png" alt="">
-      <div class="min-w-0 flex-auto">
-        <p class="text-sm font-semibold leading-6 text-gray-900">Luka Doncic{{name}}</p>
-        <p class="mt-1 truncate text-xs leading-5 text-gray-500">Player 2</p>
-      </div>
-    </div>
-    <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
-      <p class="text-sm leading-6 text-gray-900">Ranking</p>
-      <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
-    </div>
-  </li>
-  <li class="flex justify-between gap-x-6 py-5">
-    <div class="flex min-w-0 gap-x-4">
-      <img class="object-scale-down h-12 w-36 ..." src="https://cdn.nba.com/headshots/nba/latest/1040x760/201939.png" alt="">
-      <div class="min-w-0 flex-auto">
-        <p class="text-sm font-semibold leading-6 text-gray-900">Steph Curry{{name}}</p>
-        <p class="mt-1 truncate text-xs leading-5 text-gray-500">Player 3</p>
-      </div>
-    </div>
-    <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
-      <p class="text-sm leading-6 text-gray-900">Ranking</p>
-      <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
-    </div>
-  </li>
-</ul>
+        <li class="flex justify-between gap-x-6 py-5">
+          <div class="flex min-w-0 gap-x-4">
+            <img class="object-scale-down h-12 w-36 ..."
+              src="https://cdn.nba.com/headshots/nba/latest/1040x760/203507.png" alt="">
+            <div class="min-w-0 flex-auto">
+              <p class="text-sm font-semibold leading-6 text-gray-900">Giannis Antetokounmpo{{name}}</p>
+              <p class="mt-1 truncate text-xs leading-5 text-gray-500">Player 1</p>
+            </div>
+          </div>
+          <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
+            <p class="text-sm leading-6 text-gray-900">Ranking</p>
+            <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
+          </div>
+        </li>
+        <li class="flex justify-between gap-x-6 py-5">
+          <div class="flex min-w-0 gap-x-4">
+            <img class="object-scale-down h-12 w-36 ..."
+              src="https://cdn.nba.com/headshots/nba/latest/1040x760/1629029.png" alt="">
+            <div class="min-w-0 flex-auto">
+              <p class="text-sm font-semibold leading-6 text-gray-900">Luka Doncic{{name}}</p>
+              <p class="mt-1 truncate text-xs leading-5 text-gray-500">Player 2</p>
+            </div>
+          </div>
+          <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
+            <p class="text-sm leading-6 text-gray-900">Ranking</p>
+            <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
+          </div>
+        </li>
+        <li class="flex justify-between gap-x-6 py-5">
+          <div class="flex min-w-0 gap-x-4">
+            <img class="object-scale-down h-12 w-36 ..."
+              src="https://cdn.nba.com/headshots/nba/latest/1040x760/201939.png" alt="">
+            <div class="min-w-0 flex-auto">
+              <p class="text-sm font-semibold leading-6 text-gray-900">Steph Curry{{name}}</p>
+              <p class="mt-1 truncate text-xs leading-5 text-gray-500">Player 3</p>
+            </div>
+          </div>
+          <div class="hidden shrink-0 sm:flex sm:flex-col sm:items-end">
+            <p class="text-sm leading-6 text-gray-900">Ranking</p>
+            <p class="mt-1 text-xs leading-5 text-gray-500">{{ranking}}
+          </div>
+        </li>
+      </ul>
 
 
     </div>
   </div>
-</div>
+</form>
 
 <script src="/js/dashboard.js"></script>
