--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,11 +6,11 @@
     </div>
     <div
       class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
-      <article class="flex max-w-xl flex-col items-start justify-between">
+      <article class="items-start justify-between">
         <div class="flex items-center gap-x-4 text-xs">
         </div>
         <div class="group relative">
-          <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+          <h3 class="text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
             <a href="#">
 
               <span class="absolute inset-0"></span>
@@ -20,9 +20,9 @@
           </h3>
           <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600"></p>
         </div>
-        <div class="relative mt-8 flex gap-x-4">
+        <div class="relative gap-x-4">
           <img src="https://cdn.nba.com/headshots/nba/latest/1040x760/203999.png" alt=""
-            class="object-left h-48 w-96 ...">
+            class="object-left h-96 w-96 ...">
           <div class="text-sm leading-6">
             <p class="font-semibold text-gray-900">
               <a href="#">
@@ -38,12 +38,12 @@
       <div>
         <div class="px-4 sm:px-0">
           <h3 class="text-base font-semibold leading-7 text-gray-900">How to play?</h3>
-          <p class="mt-1 max-w-2xl text-sm leading-6 text-gray-500">Your Objective</p>
+          <p class="mt-1 max-w-2xl text-sm leading-6 text-gray-500">Your Objective is to build a Championship caliber team as the newly appointed General Manager. Utilize the resources awarded and create your dynasty!</p>
         </div>
         <div class="mt-6 border-t border-gray-100">
           <dl class="divide-y divide-gray-100">
             <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
-              <dt class="text-sm font-medium leading-6 text-gray-900">Become the ultimate General Manager</dt>
+              <dt class="text-sm font-medium leading-6 text-gray-900">Become the Ultimate General Manager</dt>
               <h3 class="mt-1 text-sm leading-6 text-gray-700 sm:col-span-2 sm:mt-0">Win a Championship!</h3>
             </div>
            
@@ -96,12 +96,13 @@
 
       </article>
 
-      {{!-- <div class="playerContainer  grid grid-cols-4">
-        <b>
+       {{!-- <div class="playerContainer"> --}}
+        {{!-- <b>
           <h1 class="text-lg">Add 3 players to your team!</h1>
-        </b> --}}
+        </b>  --}}
+        
         {{#each players as |player|}}
-        <div class="players grid grid-cols-4 gap-4" data-id={{player.id}}>
+        <div class="players grid grid-cols-4 gap-4 playerContainer" data-id={{player.id}}>
           {{!-- <li class="flex justify-between gap-x-6 py-5"> --}}
          
               <img class="object-scale-down h-12 w-36 ..." src={{player.img}} alt="">
@@ -123,6 +124,7 @@
           {{!-- </li> --}}
         </div>
         <button class="addBtn" data-id={{player.id}}>Add</button>
+      
         <p class="mt-2 line-clamp-3 text-sm leading-6 text-gray-600"></p>
         {{/each}}
       {{!-- </div> --}}
